external-crates/move/crates/move-compiler/tests/development/enums/matching/struct_visibility.exp
error[E04001]: restricted visibility
   ┌─ tests/development/enums/matching/struct_visibility.move:13:13
   │
13 │             m::S { t } => t,
   │             ^^^^^^^^^^ Invalid pattern for '0x42::m::S'.
 All struct can only be matched in the module in which they are declared

